langtools/test/tools/javac/generics/6711619/T6711619b.out
T6711619b.java:39:22: compiler.err.report.access: i, private, T6711619b.X1
T6711619b.java:46:22: compiler.err.report.access: i, private, T6711619b.X2
T6711619b.java:54:22: compiler.err.report.access: i, private, T6711619b.X3
T6711619b.java:61:22: compiler.err.report.access: i, private, T6711619b.X4
4 errors
